add descriptiont to factors